# ChangeLog for gnome-extra/gnome-launch-box
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  10 Feb 2011; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Metadata.xml fixed

  28 Oct 2008; justin Lecher <justin@j-schmitz.net> +metadata.xml,
  gnome-launch-box-0.4.ebuild:
  ebuild QA issues fixed

  28 Oct 2008; justin Lecher <justin@j-schmitz.net> ChangeLog:
  added
