@@ -1,4 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST gnome-launch-box-0.4.tar.gz 423661 SHA256 8935b3a2203355fa88f688134ed19406222b28f498d16d0e7275e2638556d3dc
-EBUILD gnome-launch-box-0.4.ebuild 832 SHA256 e4187e3fd58f389a571868378f4068ad71e4fc768ab603fca3eb1ffe4a84f1cb SHA512 cb394e6f23fd944bba5c0b1fd3db947808120072c1b982f63337cfbd6f6ac1846820e7877958727fc494b20d05ec07c86426603cbeee6fd456d38db36aa59b03 WHIRLPOOL 669b1a88a33b9bbb16c544d465f2be0dd41ca2d5ee6ed2840f934a2382af3ae0b1a6f20bcb152d32f0805ac8aec2fe29a8bcbedfe5be8158a5650f1cdbaa217d
-MISC ChangeLog 408 SHA256 759e40471ce4d46f11c5dd5f795536abe6f71ea9150220a9933f2206f98ffc67 SHA512 8b6d1ee7a68c4984ad7bfdae1c988173376662fe1298c805184648b699334d2615695afd48425a38a76aceb1aed59e5ce67f766e307122a35246ce6fb2c2a966 WHIRLPOOL 821a222b9093be6ea801d7c9b6c9670187757a91ff63f8cc6d968eca23e1e732cc15045ab98de02f9f90a0eb1d1638c93aeb92bd8bda3c5dcb9525e9d7e3a41b
-MISC metadata.xml 338 SHA256 e07be588554ad03a354bf9e733626f339c8cbed944dc0704f96e2116cf6e5b84 SHA512 44e06e4ccd854566eccb9245521325d57d87bcec86e145b2a09c6ebe8f3460ba6c850e44fe5a383468b627ee37bcb2240cd2ed38f056b44cc85cf9b8aa07e009 WHIRLPOOL 288fc586616302f2de24058ca341d1cb43e310ed99cd908657d82b281a72625e1d2a3b1f0a243ef94b0b29bdc846371e6746959f6ffd6e71487354a4cda1004a
+EBUILD gnome-launch-box-0.4.ebuild 776 SHA256 6a2cfaa8740278b2cb73b441a71d87b60c8c076a879bcb40e3bb06916a993559 SHA512 81aaf28a202fe43caf6fa6d0000f053e5564a69850ada0b5262a41e66172c5f0abd26ba86d07ffb12674c261f1e1d0145b4f58fcf2ccea72868300afe4566144 WHIRLPOOL 2c4468772ef439165221fcd5f041902aa19953d7f3fe84c1aba492a486a408e819eaaba04400491392dc3c56a04c863584e9901ecf589a62180bedbc6add1b66
+MISC ChangeLog 532 SHA256 5b789ba57c4d705eac65e381a513fe2e3e3994513f3af429d04ee7414dce54db SHA512 92932bb8b7c3d0ea159018171e5a0a747ac58844edc024aace46e8a6041535eac2e2fd97a5ea7e91e6c5fc55f0316c04ec27034273b28aa9933c8a4466f514d6 WHIRLPOOL 966a39a8a6b72b96141f5cfac2d7cb7ea2b498d3e06a59af67fcfdde8734c4c137efe79a5682d66df84b149a5736a6648587b887e5c569579be7f31f14fdf0d0
+MISC metadata.xml 337 SHA256 f2ae19508e9b020fb3c579ad2a1aa7a50148f54c9aff919e8fe0e62d527a8134 SHA512 b2a3ca56d4e952b0a067bc4c28877dc3c46b4d574a0e6bd4cd713a9134597aa1a9d6a851076b670c1ec22576502e92d57fe3758968f665e4a384b370b74fab4d WHIRLPOOL 90fc42ea2f4ee7537f24b2795850ce9e915a958d5e63e08a678401a501c445f660cca141fe5b21d545f0c51100ef6f216ccafe84df1e121bb3ed7e59cf580a6b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+Comment: GPGTools - http://gpgtools.org
+
+iEYEAREIAAYFAlApY/0ACgkQgAnW8HDreRak0gCfSFjHuOYtC8m7sGxNR/xab6P0
+HJQAnReOErFHA5oniQZaH7Ta1HkwJtbJ
+=QtDb
+-----END PGP SIGNATURE-----
