@@ -10,4 +10,3 @@
 		<name>Johann Schmitz</name>
 	</maintainer>
 </pkgmetadata>
-
